--- a/matplotlib_practice.ipynb
+++ b/matplotlib_practice.ipynb
@@ -260,8 +260,7 @@
     "# Create the plot.\n",
     "ax.plot(x_axis, y_axis, marker=\"D\", color=\"green\", linewidth=2, label='Boston')\n",
     "# Create labels for the x and y axes.\n",
-    "ax.set_xlabel(\"Date\")\n",
-    "ax.set_ylabel(\"Fare($)\")\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
     "# Set the y limit between 0 and 45.\n",
     "ax.set_ylim(0, 45)\n",
     "# Create a title.\n",
