--- a/PyBer_ride_data.ipynb
+++ b/PyBer_ride_data.ipynb
@@ -850,7 +850,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcccaf52040>"
+       "<matplotlib.legend.Legend at 0x7feb68f33040>"
       ]
      },
      "execution_count": 22,
@@ -894,7 +894,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcccb1297f0>"
+       "<matplotlib.legend.Legend at 0x7feb690eebb0>"
       ]
      },
      "execution_count": 23,
@@ -938,7 +938,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcccb14a640>"
+       "<matplotlib.legend.Legend at 0x7feb69126d00>"
       ]
      },
      "execution_count": 24,
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "22d6ab86",
    "metadata": {},
    "outputs": [
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "453d0425",
    "metadata": {},
    "outputs": [
@@ -1636,7 +1636,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "id": "9ae53eb1",
    "metadata": {},
    "outputs": [
@@ -1659,7 +1659,7 @@
        "63538.64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "id": "16d3176c",
    "metadata": {},
    "outputs": [
@@ -1686,7 +1686,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "id": "272f3abc",
    "metadata": {},
    "outputs": [
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "id": "8c6b86cd",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "id": "6e99a29f",
    "metadata": {},
    "outputs": [
@@ -1789,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "id": "5936adb7",
    "metadata": {},
    "outputs": [
@@ -1803,7 +1803,7 @@
        "Name: ride_id, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "id": "3876a4e6",
    "metadata": {},
    "outputs": [
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 52,
    "id": "9cced8b3",
    "metadata": {},
    "outputs": [
@@ -1859,26 +1859,28 @@
      "data": {
       "text/plain": [
        "type\n",
-       "Rural        2.623613\n",
-       "Suburban    16.481668\n",
-       "Urban       80.894719\n",
-       "Name: driver_count, dtype: float64"
+       "Rural         78\n",
+       "Suburban     490\n",
+       "Urban       2405\n",
+       "Name: driver_count, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the percentage of drivers for each city type.\n",
-    "driver_percents = 100* city_data_df.groupby([\"type\"]).sum()[\"driver_count\"] /city_data_df[\"driver_count\"].sum()\n",
+    "#driver_percents = 100* city_data_df.groupby([\"type\"]).sum()[\"driver_count\"] /city_data_df[\"driver_count\"].sum()\n",
+    "#driver_percents\n",
+    "driver_percents = city_data_df.groupby([\"type\"]).sum()[\"driver_count\"]\n",
     "driver_percents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "id": "bd723b75",
    "metadata": {},
    "outputs": [
@@ -1915,6 +1917,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "daf88368",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "950b9b03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19e70732",
    "metadata": {},
    "outputs": [],
    "source": []
